Java 8 compatible Serial and Parallel topology